plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    // JUnit Jupiter - Base para os testes
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'

    implementation 'com.google.guava:guava:33.0.0-jre'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) 
    }
}

application {
    // mainClass = 'seminario.mockito.App'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}